--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "exceljs": "4.4.0",
-    "next": "15.4.7",
+    "next": "^16.0.10",
     "next-auth": "^4.24.11",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
