--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "exceljs": "4.4.0",
-    "next": "^16.0.10",
+    "next": "^15.0.3",
     "next-auth": "^4.24.11",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
