--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.87.1",
     "exceljs": "4.4.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
