--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "tailwindcss": "^3.4.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
