--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.87.1",
-    "exceljs": "4.4.0",
+    "exceljs": "^4.4.0",
     "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "pusher": "^5.2.0",
