--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pusher-js": "^8.4.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "tesseract.js": "^7.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
